Changelog for gleam_url_fetcher.py: - Minor tweaks and bug fixes at fetch_twitter_links and initialize_globals

--- a/config.ini
+++ b/config.ini
@@ -6,7 +6,7 @@ consumer_secret: XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 max_tweets: 100
 ; 100 is the max the API permits per request
 tweets_per_qry: 100
-keyword: gleam
+keyword: gleam.io
 
 [reddit_config]
 subreddit: giveaways
