Changelog for gleam_url_fetcher.py: - Minor fix for print_progress - Waiting time between the start of url fetching and url processing is configurable in config.ini

--- a/config.ini
+++ b/config.ini
@@ -17,3 +17,4 @@ max_submissions: 5000
 [global_config]
 user_agent: Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/46.0.2490.71 Safari/537.36
 thread_count: 24
+search_wait_t: 10
